alteração logo e tamanho de tela

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://f005.backblazeb2.com/file/clarke-challenge/corumba-concessoes.png" />
+  <link rel="icon"
+    href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmDR6cjP8dTA8DD7QABhtb-BWk59LoHICCgw&usqp=CAU" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
